# openGlLearn

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.5BB5BBB417A272BF.idx  glad.c.A421030A7E53BC3E.idx  glad.h.265B979B870AE342.idx  glad.h.65E6AE657EA353A6.idx  khrplatform.h.A9A76BE7B36797BE.idx  khrplatform.h.C4860F71A458B433.idx  main.cpp.3AEA9030670A676D.idx  main.cpp.4F4200F68A32124F.idx
include/glad/: glad.h
shaders/: fragment_shader.fs  vertex_shader.vs
src/: glad.c  main.cpp  shaders.cpp  triangles.cpp
